--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next-images": "^1.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^2.0.1",
