--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next-images": "^1.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.1.0",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0"
   },
