--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "7",
+    "eslint": "^8.3.0",
     "eslint-config-next": "12.0.3"
   }
 }
