--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next-images": "^1.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.1.1",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0"
   },
@@ -19,6 +20,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "^8.3.0",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "file-loader": "^6.2.0"
   }
 }
