--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.22",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "^8.3.0",
