--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
     "@types/node": "^17.0.11",
     "@types/react": "^17.0.38",
     "next": "12.0.3",
