--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prismicio/client": "5.1.1",
     "@types/node": "^17.0.11",
     "@types/react": "^17.0.38",
+    "axios": "^0.26.0",
     "next": "12.0.3",
     "next-images": "^1.8.2",
     "prismic-dom": "^2.2.7",
